Runing on windows

--- a/conf/wrapper.conf
+++ b/conf/wrapper.conf
@@ -120,8 +120,8 @@ wrapper.ignore_sequence_gaps=TRUE
 # Do not start if the pid file already exists.
 wrapper.pidfile.strict=TRUE
 
-# Title to use when running as a console
-wrapper.console.title=@app.long.name@
+# Title to use when running as a console: @app.long.name@
+wrapper.console.title=Executable java container
 
 #********************************************************************
 # Wrapper JVM Checks
@@ -188,14 +188,15 @@ wrapper.event.jvm_restart.email.body=The JVM was restarted.\n\nPlease check on i
 #  Please uninstall the service before modifying this section.  The
 #  service can then be reinstalled.
 
-# Name of the service
-wrapper.name=@app.name@
 
-# Display name of the service
-wrapper.displayname=@app.long.name@
+# Name of the service @app.name@
+wrapper.name=EXECUTABLE_CONTAINER
 
-# Description of the service
-wrapper.description=@app.description@
+# Display name of the service @app.long.name@
+wrapper.displayname=Executable java container
+
+# Description of the service @app.long.name@
+wrapper.description=Executable java container
 
 # Service dependencies.  Add dependencies as needed starting from 1
 wrapper.ntservice.dependency.1=
