--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,12 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>ar.com.kfgodel</groupId>
   <artifactId>excutable-container</artifactId>
   <version>0.1-SNAPSHOT</version>
+  <packaging>pom</packaging>
+
   <name>ExecutableContainer</name>
   <description>Simplified binary executable container to run java programs in different platforms</description>
   
@@ -17,47 +20,9 @@
   
 
   <properties>
-    <project.java.source>1.8</project.java.source>
-    <project.java.target>1.8</project.java.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     
-    <version.plugin.compiler>3.1</version.plugin.compiler>
-    <version.plugin.jar>2.4</version.plugin.jar>
-    <version.plugin.source>2.2.1</version.plugin.source>
-    <version.plugin.eclipse>2.9</version.plugin.eclipse>
-    <version.plugin.assembly>2.4</version.plugin.assembly>
-    <version.plugin.failsafe>2.17</version.plugin.failsafe>
-    <version.plugin.surefire>2.17</version.plugin.surefire>
-    <version.plugin.shade>2.3</version.plugin.shade>
-    <version.jacoco>0.7.1.201405082137</version.jacoco>
-
-    
-    <version.slf4j>1.7.6</version.slf4j>
-    <version.logback>1.1.1</version.logback>
-    <version.junit>4.11</version.junit>
-    <version.testng>6.8.8</version.testng>
-    <version.assertj>1.6.1</version.assertj>
-    <version.mockito>1.9.5</version.mockito>
-    <version.javaspec>2.0</version.javaspec>
-    <version.mirror>1.6.1</version.mirror>
-
-      <!-- Location of the JaCoCo output file created by the agent execution during ITs. We want
-all modules to dump their coverage information into a single file for Sonar to pick up.
-Sonar is only going to look for one file so we put the file in target folder of the root of the
-project when running a top-down build. session.executionRootDirectory points there if
-we run Maven in the top level folder of the project.
-If you don't do it this way, you have to define an absolute path to a fixed location
-on the server or you have to put a relative path in every child module defining where JaCoCo is
-to place its output file. The last solution is error prone so the solution shown here or the use
-of a fixed location is recommended. -->
-      <jacoco.out.path>${session.executionRootDirectory}/target</jacoco.out.path>
-      <jacoco.out.file>jacoco.exec</jacoco.out.file>
-      <!-- Location of the JaCoCo IT output file for use on Jenkins. See jacoco.out.path. NOTE: Can't use
-      ${session.executionRootDirectory} here because of http://jira.codehaus.org/browse/SONAR-3427.
-      env.WORKSPACE is set by Jenkins, which is really the only time sonar:sonar is going to be run in
-      most cases. -->
-      <sonar.jacoco.itReportPath>${env.WORKSPACE}/target/${jacoco.out.file}</sonar.jacoco.itReportPath>
-
+    <version.plugin.assembly>2.5.3</version.plugin.assembly>
   </properties>
 
   
@@ -66,157 +31,28 @@ of a fixed location is recommended. -->
       
     <plugins>
 	
-		<!-- Genera los binarios -->
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${version.plugin.compiler}</version>
-        <configuration>
-          <source>${project.java.source}</source>
-          <target>${project.java.target}</target>
-          <debug>true</debug>
-          <!-- This parameter enables parameter name preservation -->
-          <compilerArgument>-parameters</compilerArgument>
-        </configuration>
-      </plugin>
-      
-      <!-- Corre los tests unitarios *Test -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>${version.plugin.surefire}</version>
-          <configuration>
-              <!-- Adds the line argument to dump jacoco file where expected -->
-              <argLine>${jacoco.agent.arg}</argLine>
-          </configuration>
-      </plugin>
-      
-		<!-- Corre los tests de integracion *IT -->
-	  <plugin>
-		<artifactId>maven-failsafe-plugin</artifactId>
-		<version>${version.plugin.failsafe}</version>
-          <executions>
-              <execution>
-                  <goals>
-                      <goal>integration-test</goal>
-                      <goal>verify</goal>
-                  </goals>
-                  <configuration>
-                      <!-- Adds the line argument to dump jacoco file where expected -->
-                      <argLine>${jacoco.agent.arg}</argLine>
-                  </configuration>
-              </execution>
-          </executions>
-	  </plugin>
-
-        <!-- Recopila info de cobertura para los tests -->
+      <!-- Empaqueta en un zip -->
         <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>${version.jacoco}</version>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>${version.plugin.assembly}</version>
             <executions>
                 <execution>
-                    <id>prepare-agent</id>
-                    <goals>
-                        <goal>prepare-agent</goal>
-                    </goals>
-                    <configuration>
-                        <destFile>${jacoco.out.path}/${jacoco.out.file}</destFile>
-                        <propertyName>jacoco.agent.arg</propertyName>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-
-      
-	  
-	  <!-- Los empaqueta en jars -->
-      <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>${version.plugin.jar}</version>
-        <configuration>
-          <!-- Needed to match container expected jar file -->
-          <finalName>executable-app</finalName>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <mainClass>executablejava.ExecutableMain</mainClass>
-            </manifest>
-              <manifestEntries>
-                <Build-JVM>${java.vm.name} - ${java.vm.vendor}</Build-JVM>
-                <Build-OS>${os.name} - Version: ${os.version}</Build-OS>
-                <Application-GroupId>${project.groupId}</Application-GroupId>
-                <Application-Artifact>${project.artifactId}</Application-Artifact>
-                <Application-Version>${project.version}</Application-Version>
-              </manifestEntries>
-          </archive>
-        </configuration>
-      </plugin>
-
-        <!-- Genera un sólo jar con todas las dependencias -->
-        <plugin>
-            <!-- Permite que los archivos individuales de spring sean mergeados y no pisados -->
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-shade-plugin</artifactId>
-            <version>${version.plugin.shade}</version>
-            <configuration>
-                <filters>
-                    <filter>
-                        <artifact>*:*</artifact>
-                        <excludes>
-                            <exclude>META-INF/*.SF</exclude>
-                            <exclude>META-INF/*.DSA</exclude>
-                            <exclude>META-INF/*.RSA</exclude>
-                        </excludes>
-                    </filter>
-                </filters>
-            </configuration>
-            <executions>
-                <execution>
+                    <id>generate-assembly</id>
                     <phase>package</phase>
                     <goals>
-                        <goal>shade</goal>
+                        <goal>single</goal>
                     </goals>
-                    <configuration>
-                        <transformers>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                <resource>META-INF/spring.handlers</resource>
-                            </transformer>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                <resource>META-INF/spring.schemas</resource>
-                            </transformer>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                <resource>META-INF/spring.tooling</resource>
-                            </transformer>
-                        </transformers>
-                    </configuration>
                 </execution>
             </executions>
+            <configuration>
+                <descriptors>
+                    <descriptor>src/assembly/descriptor.xml</descriptor>
+                </descriptors>
+                <finalName>${artifactId}</finalName>
+                <outputDirectory>target</outputDirectory>
+            </configuration>
         </plugin>
-
-        <!-- Attachea los fuentes como jar -->
-      <plugin>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>${version.plugin.source}</version>
-        <executions>
-          <execution>
-            <id>attach-source</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>jar-no-fork</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
 	  
-	  <!-- Permite configurar el proyecto en eclipse -->
-      <plugin>
-        <artifactId>maven-eclipse-plugin</artifactId>
-        <version>${version.plugin.eclipse}</version>
-        <configuration>
-          <downloadSources>true</downloadSources>
-        </configuration>
-      </plugin>
-
     </plugins>
   </build>
   
@@ -247,70 +83,5 @@ of a fixed location is recommended. -->
     </pluginRepository>
   </pluginRepositories>
   
-  <dependencies>
 
-    <!-- Logging -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${version.slf4j}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-      <version>${version.slf4j}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>log4j-over-slf4j</artifactId>
-      <version>${version.slf4j}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-core</artifactId>
-      <version>${version.logback}</version>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${version.logback}</version>
-    </dependency>
-    
-    <!-- Testing -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${version.junit}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- Nice assertions -->
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-      <version>${version.assertj}</version>
-        <scope>test</scope>
-    </dependency>
-
-    <!-- Spec for testing -->
-      <dependency>
-          <groupId>ar.com.dgarcia</groupId>
-          <artifactId>java-spec</artifactId>
-          <version>${version.javaspec}</version>
-          <scope>test</scope>
-      </dependency>
-
-    <!-- Mock for testing -->
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>${version.mockito}</version>
-        <scope>test</scope>
-    </dependency>
-
-  </dependencies>
-  
-  
 </project>
