Added debug options

--- a/conf/wrapper.conf
+++ b/conf/wrapper.conf
@@ -67,6 +67,9 @@ wrapper.java.additional.auto_bits=TRUE
 
 # Java Additional Parameters
 wrapper.java.additional.1=
+# Uncomment to debug
+#wrapper.java.additional.1=-Xdebug
+#wrapper.java.additional.2=-Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=n
 
 # Initial Java Heap Size (in MB)
 #wrapper.java.initmemory=3
