--- a/conf/wrapper.conf
+++ b/conf/wrapper.conf
@@ -58,6 +58,7 @@ wrapper.java.mainclass=org.tanukisoftware.wrapper.WrapperJarApp
 # Java Classpath (include wrapper.jar)  Add class path elements as
 #  needed starting from 1
 wrapper.java.classpath.1=../lib/wrapper.jar
+wrapper.java.classpath.2=../app/executable-app.jar
 
 # Java Library Path (location of Wrapper.DLL or libwrapper.so)
 wrapper.java.library.path.1=../lib
